--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Quickly create react + typescript project development environment and scaffold for developing npm package components",
   "main": "index.js",
   "scripts": {
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js",
     "lint": "npm run lint-eslint && npm run lint-stylelint",
     "lint-eslint": "eslint -c .eslintrc.js --ext .ts,.tsx,.js src",
     "lint-stylelint": "stylelint --config .stylelintrc.js src/**/*.{less,css,scss}",
@@ -46,7 +48,10 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "clean-webpack-plugin": "^4.0.0",
     "conventional-changelog-cli": "^2.2.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
@@ -55,9 +60,13 @@
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.1",
     "eslint-plugin-unicorn": "^43.0.2",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.11.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
@@ -66,6 +75,8 @@
     "stylelint-order": "^5.0.0",
     "typescript": "^4.8.2",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.1",
+    "webpack-merge": "^5.8.0"
   }
 }
